# tmp3-finder

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat  index.html  package-lock.json  package.json  server.mjs  start.bat  vite.config.ts
.github/: REPOSITORY_SETUP.md  SECURITY.md
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
READMEs/: ru-RU.md
electron/: data-service.mjs  main.mjs  preload.cjs  steam-paths.mjs
scripts/: copy-release.mjs  copy-tauri-release.mjs  generate-updater-manifest.mjs  post-dist.mjs  prepare-signed-build.mjs  prepare-tauri-dev.mjs  sign-windows.ps1  tauri.mjs
src/: App.tsx  HotkeyInput.tsx  Onboarding.tsx  ThemeToggle.tsx  api.ts  highlight.tsx  history.ts  hotkey.ts  index.css  result-text.test.ts  result-text.ts  search.test.ts  search.ts  sounds.ts  types.ts  version.ts  vite-env.d.ts  vo-hints.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.signing/: README.md  tmp3-finder.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: data.rs  hotkey.rs  lib.rs  steam.rs  tray.rs  updater.rs
src/i18n/: context.tsx  en.ts  ru.ts  types.ts
